# zenful-tickets

./: .env.build.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agents/skills/release/: SKILL.md
.agents/skills/rust/: SKILL.md
.agents/skills/rust-errors/: SKILL.md
.agents/skills/rust/references/: advanced-patterns.md  security-examples.md
.claude/skills/: release  rust  rust-errors  tauri
.github/workflows/: release.yml
.opencode/plans/: prompt-quality-improvement.md
public/: voice-worklet.js
scripts/: build.sh  release.sh
src/: App.tsx  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  reference_files.rs  secrets.rs  speech.rs  state.rs
src-tauri/src/ai/: cli.rs  gemini.rs  mod.rs  opencode_models.rs  openrouter.rs  openrouter_models.rs  prompt.rs
src-tauri/src/attachments/: extract.rs  mod.rs
src-tauri/src/jira/: adf.rs  mod.rs
src/components/: AbstractBall.tsx  AttachmentChips.tsx  AttachmentMenu.tsx  Background.tsx  Icon.tsx  MicSelector.tsx  Persona.tsx  ProviderIcon.tsx  primitives.tsx
src/components/ai-elements/: message.tsx  mic-selector.tsx  model-selector.tsx  prompt-input.tsx  shimmer.tsx
src/components/animate-ui/components/base/: checkbox.tsx  switch.tsx
src/components/animate-ui/primitives/base/: switch.tsx
src/components/icons-animated/: arrow-right.tsx  index.ts  key.tsx  lock.tsx  mic.tsx  refresh-ccw.tsx  send.tsx
src/components/ui/: button.tsx  global-tooltip.tsx  input.tsx  sonner.tsx  spinner.tsx  textarea.tsx  tooltip.tsx
src/hooks/: use-sound.ts
src/lib/: chip-lay-1.ts  click-soft.ts  errors.ts  hotkey.ts  i-quest-complete.ts  notify.ts  opencode-catalog.ts  openrouter-catalog.ts  platform.ts  providers.ts  sound-engine.ts  sound-types.ts  switch-off.ts  switch-on.ts  tauri.ts  theme.ts  ui-sounds.ts  use-draft-attachments.ts  voice.ts
src/screens/: Draft.tsx  Main.tsx  Onboarding.tsx  Settings.tsx
src/styles/: index.css
