[package]
name = "zenfultickets"
version = "0.1.6"
description = "Zenful Tickets — AI-assisted Jira ticket drafter"
authors = ["Kevin Koester <kevin.koester@zenfulfillment.com>"]
edition = "2021"

[lib]
name = "zenfultickets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
# `macos-private-api`: required so WKWebView exposes navigator.mediaDevices
# (getUserMedia / enumerateDevices) for the voice input + MicSelector. Without
# this feature + tauri.conf.json's app.macOSPrivateApi=true, mediaDevices is
# undefined in production builds and any code path touching it throws.
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tauri plugins (see TODO.md for rationale per plugin)
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# Non-Tauri crates
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
which = "7"
base64 = "0.22"
thiserror = "2"
url = "2"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
bytes = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific — platform-conditional so Windows/Linux builds don't break.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
