[package]
name = "zenfultickets"
version = "0.1.12"
description = "Zenful Tickets — AI-assisted Jira ticket drafter"
authors = ["Kevin Koester <kevin.koester@zenfulfillment.com>"]
edition = "2021"

[lib]
name = "zenfultickets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
# `macos-private-api`: required so WKWebView exposes navigator.mediaDevices
# (getUserMedia / enumerateDevices) for the voice input + MicSelector. Without
# this feature + tauri.conf.json's app.macOSPrivateApi=true, mediaDevices is
# undefined in production builds and any code path touching it throws.
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tauri plugins (see TODO.md for rationale per plugin)
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# Non-Tauri crates
# keyring backends per-platform.
#  - apple-native       → macOS Keychain (Security framework)
#  - windows-native     → Windows Credential Manager (wincred)
#  - sync-secret-service → Linux Secret Service via pure-Rust zbus (gnome-keyring / KWallet)
#
# `sync-secret-service` REQUIRES a crypto backend feature (`crypto-rust` or
# `crypto-openssl`) — the Secret Service protocol negotiates an encrypted
# session, so the keyring crate refuses to compile without one. We pick
# `crypto-rust` (pure-Rust RustCrypto stack) over `crypto-openssl` to avoid a
# system libssl-dev dep on Linux CI runners.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
which = "7"
base64 = "0.22"
thiserror = "2"
url = "2"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
bytes = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

# Attachment text extraction. Pulled in deliberately to keep the surface area
# tight: calamine handles xlsx + xls + ods, pdf-extract handles plain-text PDF
# extraction, csv handles delimited reads. DOCX is decoded manually via zip +
# quick-xml (already pulled transitively) to avoid the heavy `docx-rust` tree.
calamine = "0.26"
pdf-extract = "0.7"
csv = "1.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific — platform-conditional so Windows/Linux builds don't break.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
